--- a/public/index.html
+++ b/public/index.html
@@ -6,21 +6,17 @@
   <script>
     async function fetchData() {
       try {
-        setStatus('Fetching system information and performing speed test...');
-        const response = await fetch('/submit');
-    
+       const response = await fetch('/submit');
         if (!response.ok) {
-          throw new Error(`HTTP error: ${response.status}`);
+          throw new Error(`HTTP error! status: ${response.status}`);
         }
-    
         const data = await response.json();
-        setStatus(''); // Clear status message
         displayData(data.systemData, data.speedData);
       } catch (error) {
-        setStatus(`Error: ${error.message}`);
+        console.error('There was a problem with the fetch operation:', error);
+        displayStatus('Error: Failed to fetch data from the server.');
       }
     }
-
 
     function setStatus(message) {
       document.getElementById('status').textContent = message;
