--- a/public/index.html
+++ b/public/index.html
@@ -1,55 +1,50 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>System Information and Speed Test</title>
-  <script>
-    async function fetchData() {
-      try {
-       const response = await fetch('/submit');
-        if (!response.ok) {
-          throw new Error(`HTTP error! status: ${response.status}`);
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Client System Information and Speed Test</title>
+    <script>
+        async function fetchData() {
+          const systemData = await collectSystemInformation(); // Add 'await' here
+          const speedData = await performSpeedTest();
+          const data = { systemData, speedData };
+          console.log(data);
+
+          const response = await fetch('/submit', {
+            method: 'POST',
+            headers: {
+              'Content-Type': 'application/json',
+            },
+            body: JSON.stringify(data),
+          });
+
+          const result = await response.json();
+          console.log(result);
         }
-        const data = await response.json();
-        displayData(data.systemData, data.speedData);
-      } catch (error) {
-        console.error('There was a problem with the fetch operation:', error);
-        displayStatus('Error: Failed to fetch data from the server.');
-      }
-    }
 
-    function setStatus(message) {
-      document.getElementById('status').textContent = message;
-    }
+        function collectSystemInformation() {
+            const userAgent = navigator.userAgent;
+            const platform = navigator.platform;
+            const language = navigator.language;
+            const hardwareConcurrency = navigator.hardwareConcurrency;
 
-    function displayData(systemData, speedData) {
-      const resultDiv = document.getElementById('result');
-      resultDiv.innerHTML = `
-        <p>CPU Model: ${systemData.cpuModel}</p>
-        <p>Motherboard Vendor: ${systemData.motherboardVendor}</p>
-        <p>Motherboard Model: ${systemData.motherboardModel}</p>
-        <p>GPUVendor: ${systemData.gpuVendor}</p>
-        <p>GPU Model: ${systemData.gpuModel}</p>
-        <p>Total RAM: ${systemData.ram} GB</p>
-        <p>Download Speed: ${speedData.downloadSpeed} Mbps</p>
-        <p>Upload Speed: ${speedData.uploadSpeed} Mbps</p>`;
-    }
+            return { userAgent, platform, language, hardwareConcurrency };
+        }
 
-    function displayStatus(message) {
-      const statusElement = document.getElementById('status');
-      if (statusElement) {
-        statusElement.textContent = message;
-      } else {
-        console.error('Status element not found');
-      }
-    }
+        async function performSpeedTest() {
+            const startTime = new Date().getTime();
+            const response = await fetch('https://speed.hetzner.de/100MB.bin');
+            const endTime = new Date().getTime();
+            const duration = (endTime - startTime) / 1000;
+            const size = 100 * 1024 * 1024;
+            const speed = (size / duration / (1024 * 1024)).toFixed(2);
 
-  </script>
+            return { speed };
+        }
+    </script>
 </head>
 <body>
-  <h1>System Information and Speed Test</h1>
-  <button onclick="fetchData()">Get System Information and Perform Speed Test</button>
-  <p id="status"></p>
-  <div id="result"></div>
+    <button onclick="fetchData()">Collect System Information and Perform Speed Test</button>
 </body>
 </html>
