--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Client System Information and Speed Test</title>
+    <script src="https://unpkg.com/speedtest-net@2.1.1"></script>
     <script>
         async function fetchData() {
           const systemData = await collectSystemInformation(); // Add 'await' here
@@ -33,14 +34,17 @@
         }
 
         async function performSpeedTest() {
-            const startTime = new Date().getTime();
-            const response = await fetch('https://speed.hetzner.de/100MB.bin');
-            const endTime = new Date().getTime();
-            const duration = (endTime - startTime) / 1000;
-            const size = 100 * 1024 * 1024;
-            const speed = (size / duration / (1024 * 1024)).toFixed(2);
-
-            return { speed };
+          return new Promise((resolve, reject) => {
+            speedtest({ acceptLicense: true, acceptGdpr: true }, (error, data) => {
+              if (error) {
+                reject(error);
+              } else {
+                const downloadSpeed = (data.download.bandwidth / 125000).toFixed(2);
+                const uploadSpeed = (data.upload.bandwidth / 125000).toFixed(2);
+                resolve({ downloadSpeed, uploadSpeed });
+              }
+            });
+          });
         }
     </script>
 </head>
